[gd_scene load_steps=21 format=3 uid="uid://duqvxjhpfmmvu"]

[ext_resource type="Script" path="res://scenes/intro.gd" id="1_7rja8"]
[ext_resource type="Texture2D" uid="uid://crnctlnvi7q7w" path="res://sprites/Intro/Intro Neighbor Background.png" id="1_lfkam"]
[ext_resource type="Texture2D" uid="uid://cgcvhjfc6yh4b" path="res://sprites/Intro/Mr. Blob Talking-Sheet.png" id="2_wv7l3"]
[ext_resource type="Texture2D" uid="uid://dy2kxcrp3wjv8" path="res://sprites/Intro/Neighbor Crying-Sheet.png" id="3_lrvsm"]
[ext_resource type="Texture2D" uid="uid://b8e7dfy07ns3l" path="res://sprites/Mr. Blob Movement Flipped-Sheet.png" id="4_v35tt"]

[sub_resource type="Curve2D" id="Curve2D_0ovbj"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 260, 326, 0, 0, 0, 0, 373, 356, 0, 0, 0, 0, 584, 365, 0, 0, 0, 0, 759, 477, 0, 0, 0, 0, 795, 485)
}
point_count = 5

[sub_resource type="AtlasTexture" id="AtlasTexture_fpgus"]
atlas = ExtResource("2_wv7l3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vwcs"]
atlas = ExtResource("2_wv7l3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwpdr"]
atlas = ExtResource("2_wv7l3")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bh8sf"]
atlas = ExtResource("4_v35tt")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkbe5"]
atlas = ExtResource("4_v35tt")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bx153"]
atlas = ExtResource("4_v35tt")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tg5w1"]
atlas = ExtResource("2_wv7l3")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnggr"]
atlas = ExtResource("2_wv7l3")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_7lyjm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpgus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vwcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwpdr")
}],
"loop": true,
"name": &"Talking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bh8sf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkbe5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bx153")
}],
"loop": true,
"name": &"Walking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tg5w1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnggr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3qvpp"]
atlas = ExtResource("3_lrvsm")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkred"]
atlas = ExtResource("3_lrvsm")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdinl"]
atlas = ExtResource("3_lrvsm")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ntu5"]
atlas = ExtResource("3_lrvsm")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_y2u1b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qvpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkred")
}],
"loop": true,
"name": &"Talking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdinl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ntu5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Intro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7rja8")

[node name="TextEdit" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1271.0
offset_bottom = 729.0
texture = ExtResource("1_lfkam")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_0ovbj")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(260, 326)
rotation = 0.2595

[node name="MR_BLOB" type="AnimatedSprite2D" parent="Path2D/PathFollow2D"]
position = Vector2(5.79913, -1.53958)
rotation = -0.2595
sprite_frames = SubResource("SpriteFrames_7lyjm")

[node name="Timer" type="Timer" parent="Path2D/PathFollow2D"]
wait_time = 0.1
autostart = true

[node name="MR_NEIGHBOR" type="AnimatedSprite2D" parent="."]
position = Vector2(895, 452)
sprite_frames = SubResource("SpriteFrames_y2u1b")
animation = &"Talking"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 163.0
offset_top = 549.0
offset_right = 1116.0
offset_bottom = 706.0

[connection signal="timeout" from="Path2D/PathFollow2D/Timer" to="." method="_on_timer_timeout"]
